# service-man

./: .gitignore  README.md  meson.build  services
data/: gschema.xml
src/: Application.vala  Plug.vala  ServiceManagerApplication.vala  meson.build
src/DBusProxies/: SystemdManager.vala
src/Widgets/: HeaderBar.vala  ServicePaned.vala  ServiceView.vala  SettingsLabel.vala  Window.vala
